# Full-Stack-RAG

./: .gitignore  LICENSE  README.md  package-lock.json
backend/: pyproject.toml
backend/src/: app.py  qdrant.py  rag.py
frontend/: package-lock.json  package.json
frontend/rag-app/: package-lock.json
frontend/rag-app/src/: App.css  App.js  QuestionForm.js
