[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["samlonka <lsampath@citridot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
langchain = "^0.2.0"
qdrant-client = "^1.9.1"
openai = "^1.30.1"
langchain-community = "^0.2.0"
python-decouple = "^3.8"
langchain-qdrant = "^0.1.0"
langchain-openai = "^0.1.7"
bs4 = "^0.0.2"
langchain-core = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
